mungegithub/cherrypick/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: @@-cherrypick
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: cherrypick
        target-repo: @@
    spec:
      containers:
      - name: cherrypick
        command:
        - /mungegithub
        - --dry-run=false
        - --alsologtostderr
        - --config-path=/etc/munge-config/configmap.yaml
        image: gcr.io/k8s-testimages/cherrypick:2016-03-14-7fb1dae
        ports:
        - name: status
          containerPort: 8080
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 600m
        volumeMounts:
        - mountPath: /etc/munge-config
          name: munge-config
        - mountPath: /etc/secret-volume
          name: cherrypick-secret-volume
        - mountPath: /gitrepo
          name: repo
      volumes:
      - name: munge-config
        configMap:
          name: @@-cherrypick-config
      - name: cherrypick-secret-volume
        secret:
          secretName: @@-github-token
      - name: repo
        emptyDir: {}
