mungegithub/cherrypick/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cherrypick
    target-repo: @@
  name: @@-cp-status
  namespace: default
spec:
  ports:
  - name: status
    port: 80
    targetPort: status
  selector:
    app: cherrypick
    target-repo: @@
  type: ClusterIP
