mungegithub/cherrypick/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cherrypick
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: cert-manager.cherrypick.build-infra.jetstack.net
    http:
      paths:
        - backend:
            serviceName: cert-manager-cp-status
            servicePort: 80
  - host: tarmak.cherrypick.build-infra.jetstack.net
    http:
      paths:
        - backend:
            serviceName: tarmak-cp-status
            servicePort: 80
  tls:
  - hosts:
    - cert-manager.cherrypick.build-infra.jetstack.net
    - tarmak.cherrypick.build-infra.jetstack.net
    secretName: cherrypick-tls
